bugfixing, refactor and added realtime console of the processor to frontend

--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -14,8 +14,18 @@
         <button id="loadConfigFromDisk">Load Config from disk</button>
         <button id="saveConfigToDisk">Save Config to Disk</button>
     </div>
+
+    <div>
+        <label for="finalTrackLengthMinutes">Final track length minutes</label>
+        <input id="finalTrackLengthMinutes" type = "number" value="60">
+    </div>
+
+    <div>
+        <div id="sliders"></div>
+        <hr>
+        <div id="console"></div>
+    </div>
     
-    <div id="sliders"></div>
     
     <script src="/script.js" type="module"></script>
 </body>
