styled console UI

--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -20,10 +20,12 @@
         <input id="finalTrackLengthMinutes" type = "number" value="60">
     </div>
 
-    <div>
+    <div class = "main">
         <div id="sliders"></div>
         <hr>
-        <div id="console"></div>
+        <div id="console">
+            <div id="console-content"></div>
+        </div>
     </div>
     
     
