improved ux with subscene saves

--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -20,6 +20,16 @@
         <input id="finalTrackLengthMinutes" type = "number" value="60">
     </div>
 
+    <div>
+        <label for="currentSubsceneLabelInput">Current subscene label</label>
+        <input id="currentSubsceneLabelInput" type = "text">
+    </div>
+
+    <div>
+        <label for="savedSubscenesSelector">Saved subscenes</label>
+        <select id="savedSubscenesSelector"></select>
+    </div>
+
     <div class = "main">
         <div id="sliders"></div>
         <hr>
